2003-11-25  Bradley Bell  <btb@icculus.org>

	* VisualCE/.cvsignore, VisualCE/d2x/.cvsignore,
	VisualCE/libmve/.cvsignore, VisualCE/mveplayer/.cvsignore: added
	.cvsignore files

2003-11-24  Bradley Bell  <btb@icculus.org>

	* libmve/decoder8.c, libmve/mve_main.c, libmve/mvelib.c,
	libmve/mveplay.c: stuff to play mve's in WinCE

	* arch/win32/findfile.c: unused functions...

	* README: stuff

	* arch/sdl/mouse.c, main/konfig.c, main/newmenu.c, main/newmenu.h:
	enabled mouse control of menus

	* main/mission.h: oops, didn't mean to change this.

2003-11-21  Bradley Bell  <btb@icculus.org>

	* VisualCE/d2x/d2x.vcp: updated project file

2003-11-20  Bradley Bell  <btb@icculus.org>

	* VisualCE, VisualCE/d2x, VisualCE/d2x/d2x.vcp, VisualCE/d2x.vcw,
	VisualCE/libmve, VisualCE/libmve/libmve.vcp, VisualCE/mveplayer,
	VisualCE/mveplayer/mveplayer.vcp: added project files for eMbedded
	Visual C++

2003-11-17  Bradley Bell  <btb@icculus.org>

	* configure.ac, arch/linux/Makefile.am, arch/linux/linuxnet.c,
	main/menu.c: added option to disable kalinix under unix

	* main/game.c, main/newmenu.c: always set menu mode for GL popups

2003-11-14  Bradley Bell  <btb@icculus.org>

	* main/automap.c: fix automap background image

	* main/automap.c, main/automap.h: delete cruft

	* main/automap.c: fix level number position

	* main/automap.c: simplify g3_draw_line hack

	* main/menu.c: stop pointless vid mode changes

2003-11-07  Bradley Bell  <btb@icculus.org>

	* NEWS, installation.txt: s'more documentation

2003-11-07  Steffen Pohle  <stpohle@gmx.net>

	* configure.ac: fix .exe extension problems

2003-11-07  Bradley Bell  <btb@icculus.org>

	* arch/ogl/ogl.c: disable texture format verification for OS X -
	Textures work fine!

2003-11-06  Bradley Bell  <btb@icculus.org>

	* main/automap.c, main/gamecntl.c, main/movie.c, main/titles.c:
	use more traditional Alt+Enter for toggling fullscreen

	* 2d/ibitblt.c, main/mission.h: comments/formatting
